--- a/03_Fiches_thematiques/fiche_pivoter_donnees.Rmd
+++ b/03_Fiches_thematiques/fiche_pivoter_donnees.Rmd
@@ -57,6 +57,63 @@ bpe_ens_2018_tbl <- as_tibble(bpe_ens_2018)
 ```
 
 
+
+
+#### `pivot_longer`: transformer des colonnes en lignes
+
+La fonction `pivot_longer` permet de restructurer des données en transformant des colonnes en lignes. Elle sert fréquemment au début d'un traitement, pour transformer des données mal structurées en une table facile à traiter. Cette fonction prend quatre arguments principaux:
+
+- le `data.frame` (ou le `tibble`) auquel elle est appliquée;
+- `cols`: un vecteur contenant le nom des colonnes dont les valeurs vont être transposées;
+- `names_to`: le nom de la nouvelle colonne qui va contenir les noms des colonnes transposées;
+- `values_to`: le nom de la nouvelle colonne qui va contenir les valeurs des colonnes transposées.
+
+Voici un exemple de l'usage de cette fonction avec les données Filosofi 2016 sur les EPCI. On peut voir que cette table contient deux types d'information: le code de l'EPCI (`CODGEO`), et des colonnes donnant le taux de pauvreté total (`TP6016`) et le taux de pauvreté par tranche d'âge (de `TP60AGE116` à `TP60AGE616`).
+
+```{r}
+head(filosofi_epci_2016_tbl)
+```
+
+Nous allons restructurer cette table pour obtenir une nouvelle table, avec une observation par EPCI et par tranche d'âge. Voici le code qui permet d'obtenir cette table: on transpose les valeurs des colonnes dont le nom commence par "TP" (`cols = starts_with("TP")`), le nom des colonnes transposées sera indiquée dans la nouvelle colonne "tranche_age" (`names_to = "tranche_age"`) et les valeurs des colonnes transposées seront indiquées dans la colonne "taux_pauvrete" (`values_to = "taux_pauvrete"`).
+
+```{r}
+donnees_pauvrete_long <- filosofi_epci_2016_tbl %>% pivot_longer(cols = starts_with("TP"), names_to = "tranche_age", values_to = "taux_pauvrete")
+head(donnees_pauvrete_long, 10)
+```
+
+#### `pivot_wider`: transformer des lignes en colonnes
+
+La fonction `pivot_wider` permet de restructurer des données en transformant des lignes en colonnes. Cette fonction prend quatre arguments principaux:
+
+- le `data.frame` (ou le `tibble`) auquel elle est appliquée;
+- `id_cols`: un vecteur contenant le nom des colonnes qui définissent les observations de la table transposée;
+- `names_from`: un vecteur contenant le nom de la (ou des) colonne(s) qui donne(nt) les noms des nouvelles colonnes;
+- `values_from`: un vecteur contenant le nom de la (ou des) colonne(s) dont les valeurs vont être transposées.
+
+Par ailleurs, il est souvent utile d'utiliser l'option `names_prefix` pour définir le préfixe du nom des nouvelles colonnes.
+
+```{r, eval=TRUE}
+bpe_ens_2018 %>%
+	group_by(REG, TYPEQU) %>%
+	summarise(NB_EQUIP_TOT = sum(NB_EQUIP)) %>%
+	pivot_wider(id_cols =TYPEQU,  names_from = REG, values_from = NB_EQUIP_TOT, names_prefix = "nb_equip_reg")
+```
+
+
+::: {.conseil data-latex=""}
+
+Il est tentant de restructurer les données sous format *wide* car ce format peut paraître plus intuitif. Toutefois, il est généralement plus simple et plus rigoureux de traiter les données en format *long*. En effet, l'utilisation de `pivot_wider()` aboutit fréquemment à des tables mal ordonnées, dont les noms de colonnes contiennent des informations importantes. Il est donc conseillé de bien réfléchir avant de restructurer en format *wide*, et de ne le faire que lorsque cela paraît indispensable.
+
+:::
+
+
+
+
+
+
+
+
+
 ### Pivoter des données vers un format large (*long to wide*)
 
 Somme des équipements par régions et type d'équipement
